# grpc-tests

./: Cargo.toml  README.md  build.rs  consts.rs
proto/: helloworld.proto
src/: client.rs  server.rs
src/compiled_protos/: helloworld.rs
