[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "1.2.0"
prost = "0.13.4"
tokio = { version = "1.43.0", features = ["full"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/client.rs"

[build-dependencies]
tonic-build = "*"
